--- a/Snack/Form1.resx
+++ b/Snack/Form1.resx
@@ -120,6 +120,65 @@
   <metadata name="printDocument1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="PnTela.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAOIAAADgCAYAAAAe2LrcAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAADENJREFUeF7t3aFxAwAMBEG3Z5gWA9NNUMqxUWYeHF4TgQViRx7r8fP39fr3/fv8
+        qG35hGqSqkmqJqmapGpSboijmqRqkqpJqiapmpQb4qgmqZqkapKqSaom5YY4qkmqJqmapGqSqkm5IY5q
+        kqpJqiapmqRqUm6Io5qkapKqSaomqZqUG+KoJqmapGqSqkmqJuWGOKpJqiapmqRqkqpJuSGOapKqSaom
+        qZqkalJuiKOapGqSqkmqJqmalBviqCapmqRqkqpJqiblhjiqSaomqZqkapKqSbkhjmqSqkmqJqmapGpS
+        boijmqRqkqpJqiapmpQb4qgmqZqkapKqSaom5YY4qkmqJqmapGqSqkm5IY5qkqpJqiapmqRqUm6Io5qk
+        apKqSaomqZqUG+KoJqmapGqSqkmqJuWGOKpJqiapmqRqkqpJuSGOapKqSaomqZqkalJuiKOapGqSqkmq
+        JqmalBviqCapmqRqkqpJqiblhjiqSaomqZqkapKqSbkhjmqSqkmqJqmapGpSboijmqRqkqpJqiapmpQb
+        4qgmqZqkapKqSaom5YY4qkmqJqmapGqSqkm5IY5qkqpJqiapmqRqUm6Io5qkapKqSaomqZqUG+KoJqma
+        pGqSqkmqJuWGOKpJqiapmqRqkqpJeexRcdK2fEI1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFUk1RN
+        UjVJ1SRVk3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNUTVI1SdUk
+        VZNyQxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoNcVSTVE1SNUnVJFWTckMc
+        1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFUk1RNUjVJ1SRVk3JDHNUkVZNU
+        TVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNUTVI1SdUkVZNyQxzVJFWTVE1SNUnV
+        pNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoNcVSTVE1SNUnVJFWTckMc1SRVk1RNUjVJ1aTcEEc1
+        SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFUk1RNUjVJ1SRVk3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWT
+        VE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNUTVI1SdUkVZNyQxzVJFWTVE1SNUnVpNyj0lFNUjVJ1SRVk1RN
+        yg1xVJNUTVI1SdUkVZNyQxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoNcVST
+        VE1SNUnVJFWTckMc1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFUk1RNUjVJ
+        1SRVk3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNUTVI1SdUkVZNy
+        QxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoNcVSTVE1SNUnVJFWTckMc1SRV
+        k1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFUk1RNUjVJ1SRVk3JDHNUkVZNUTVI1
+        SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNUTVI1SdUkVZNyQxzVJFWTVE1SNUnVpNwQ
+        RzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoNcVSTVE1SNUnVJFWTckMc1SRVk1RNUjVJ1aTcEEc1SdUk
+        VZNUTVI1KfeodFSTVE1SNUnVJFWTckMc1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWT
+        VE3KDXFUk1RNUjVJ1SRVk3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyg1x
+        VJNUTVI1SdUkVZNyQxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoNcVSTVE1S
+        NUnVJFWTckMc1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFUk1RNUjVJ1SRV
+        k3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNUTVI1SdUkVZNyQxzV
+        JFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoNcVSTVE1SNUnVJFWTckMc1SRVk1RN
+        UjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFUk1RNUjVJ1SRVk3JDHNUkVZNUTVI1SdWk
+        3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyj0qHdUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFN
+        UjVJ1SRVk1RNyg1xVJNUTVI1SdUkVZNyQxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUk
+        VZNUTcoNcVSTVE1SNUnVJFWTckMc1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3K
+        DXFUk1RNUjVJ1SRVk3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNU
+        TVI1SdUkVZNyQxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoNcVSTVE1SNUnV
+        JFWTckMc1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFUk1RNUjVJ1SRVk3JD
+        HNUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNUTVI1SdUkVZNyQxzVJFWT
+        VE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoNcVSTVE1SNUnVJFWTco9KRzVJ1SRVk1RN
+        UjUpN8RRTVI1SdUkVZNUTcoNcVSTVE1SNUnVJFWTckMc1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfE
+        UU1SNUnVJFWTVE3KDXFUk1RNUjVJ1SRVk3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ
+        1SRVk1RNyg1xVJNUTVI1SdUkVZNyQxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNU
+        TcoNcVSTVE1SNUnVJFWTckMc1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFU
+        k1RNUjVJ1SRVk3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNUTVI1
+        SdUkVZNyQxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoNcVSTVE1SNUnVJFWT
+        ckMc1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFUk1RNUjVJ1SRVk3JDHNUk
+        VZNUTVI1SdWk3KPSUU1SNUnVJFWTVE3KDXFUk1RNUjVJ1SRVk3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWT
+        VE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNUTVI1SdUkVZNyQxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUp
+        N8RRTVI1SdUkVZNUTcoNcVSTVE1SNUnVJFWTckMc1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1S
+        NUnVJFWTVE3KDXFUk1RNUjVJ1SRVk3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRV
+        k1RNyg1xVJNUTVI1SdUkVZNyQxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUpN8RRTVI1SdUkVZNUTcoN
+        cVSTVE1SNUnVJFWTckMc1SRVk1RNUjVJ1aTcEEc1SdUkVZNUTVI1KTfEUU1SNUnVJFWTVE3KDXFUk1RN
+        UjVJ1SRVk3JDHNUkVZNUTVI1SdWk3BBHNUnVJFWTVE1SNSk3xFFNUjVJ1SRVk1RNyg1xVJNUTVI1SdUk
+        VZNyQxzVJFWTVE1SNUnVpNwQRzVJ1SRVk1RNUjUZz9cbgQxsHVi/wJ4AAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>158, 17</value>
   </metadata>
@@ -129,7 +188,6 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIADuOQAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
