--- a/Snack/Properties/Resources.resx
+++ b/Snack/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Apple" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Apple.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="xadrewz" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\xadrewz.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
